Fix footer links overflow on specific MAC resolution by adding padding

--- a/web/src/custom.css
+++ b/web/src/custom.css
@@ -140,3 +140,7 @@ a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:
     padding-left: 0;
     padding-right: 0;
 }
+.pf-c-login__footer ul.pf-c-list.pf-m-inline{
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
